admin principal 받아오기 성공