@@ -19,7 +19,10 @@ public class PrincipalAdmin implements UserDetails {
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return Collections.singletonList(new SimpleGrantedAuthority(admin.getRole()));
+//    return Collections.singletonList(new SimpleGrantedAuthority(admin.getRole()));
+    String role = admin.getRole(); // 또는 admin.getRole()
+    String authority = role != null && role.startsWith("ROLE_") ? role : "ROLE_" + role;
+    return List.of(new SimpleGrantedAuthority(authority));
   }
 
   @Override
